# docxlatex

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  unittest.yml
docs/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js  styles.css
docs/.doctrees/: environment.pickle  index.doctree
docs/_static/: documentation_options.js
docs/source/: conf.py
docs/spec/: ignored-tags.html  ignored-tags.md  index.html  index.md  supported-tags.html  supported-tags.md  unsupported-tags.html  unsupported-tags.md
docs_src/: Makefile  conf.py  index.rst  make.bat
docs_src/spec/: index.rst  supported-tags.rst  unsupported-tags.rst
docx/: d1.docx  d2.docx
docxlatex/: __init__.py  cleaners.py  cli.py  docxlatex.py  ommlparser.py  tagparsers.py
docxlatex.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docxlatex/parser/: __init__.py  ommlparser.py  utils.py
specification/: specification.md  supported-tags.md  unsupported-tags.md
src/: docxlatex.py  tagparsers.py
tests/: d1.docx  test_simple_text_extraction.py
tests/docx/: advanced_binary_operators.docx  advanced_relational_operators.docx  basic_math_operators.docx  basic_nary_operators.docx  binomial-theorem.docx  common-equations.docx  common_binary_operators.docx  common_relational_operators.docx  fourier_series.docx  greek_letters.docx  letter_like_symbols.docx  operator_structures.docx  operators.docx  simple-equation-linear-format.docx  simple-text.docx  taylor_expansion.docx  ~$d1.docx
tests/docx/tags/: r.docx
(+147 files in other folders)
